src/libqwidget.bf

	[LinkName("QWidget_CreateWindowContainer3")]
	public static extern QWidget QWidget_CreateWindowContainer3(QWindow window, QWidget parent, int64 flags);
	[LinkName("QWidget_UpdateMicroFocus1")]
	public static extern void QWidget_UpdateMicroFocus1(void* c_this, int64 query);
	[LinkName("QWidget_Create1")]
	public static extern void QWidget_Create1(void* c_this, uint64 param1);
	[LinkName("QWidget_Create2")]
	public static extern void QWidget_Create2(void* c_this, uint64 param1, bool initializeWindow);
	[LinkName("QWidget_Create3")]
	public static extern void QWidget_Create3(void* c_this, uint64 param1, bool initializeWindow, bool destroyOldWindow);
	[LinkName("QWidget_Destroy1")]
	public static extern void QWidget_Destroy1(void* c_this, bool destroyWindow);
	[LinkName("QWidget_Destroy2")]
	public static extern void QWidget_Destroy2(void* c_this, bool destroyWindow, bool destroySubWindows);
}